v1.0.0/modules/schema/pages/class/Gate.adoc
= `Gate`
:toclevels: 4


+++Logical gate than support logical operation based on the input.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Gate`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Gate`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Gate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemedialActionScheme {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PinGate {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



StageTrigger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ProtectiveAction {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



StageTrigger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



StageTrigger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TriggerCondition {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ProtectiveAction {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



GateInputPin {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Gate -> RemedialActionScheme: RemedialActionScheme


Gate -> PinGate: PinGate


Gate -> StageTrigger: StageTriggerArmed


Gate -> ProtectiveAction: ProtectiveActionCom


Gate -> StageTrigger: StageTriggerCom


Gate -> StageTrigger: StageTrigger


Gate -> TriggerCondition: TriggerCondition


Gate -> ProtectiveAction: ProtectiveActionEnabled


Gate -> GateInputPin: GateInputPin


Gate -> DiagramObject: DiagramObjects


Gate -> InstanceSet: InstanceSet


Gate -> Name: Names


Gate -> ChangeSetMember: PropertiesCIMDataObject


Gate -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<GateInputPin,`GateInputPin`>>
| 1..*
| xref::class/GateInputPin.adoc[`GateInputPin`]
| +++Input to the gate.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/GateLogicKind.adoc[`GateLogicKind`]
| +++The logical operation of the gate.+++

| <<PinGate,`PinGate`>>
| 0..*
| xref::class/PinGate.adoc[`PinGate`]
| n/a

| <<ProtectiveActionCom,`ProtectiveActionCom`>>
| 0..*
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]
| +++For the ProtectiveAction to be activated the condition for communication needs to be met (true).+++

| <<ProtectiveActionEnabled,`ProtectiveActionEnabled`>>
| 0..*
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]
| n/a

| <<RemedialActionScheme,`RemedialActionScheme`>>
| 0..*
| xref::class/RemedialActionScheme.adoc[`RemedialActionScheme`]
| n/a

| <<StageTrigger,`StageTrigger`>>
| 0..*
| xref::class/StageTrigger.adoc[`StageTrigger`]
| n/a

| <<StageTriggerArmed,`StageTriggerArmed`>>
| 0..*
| xref::class/StageTrigger.adoc[`StageTrigger`]
| n/a

| <<StageTriggerCom,`StageTriggerCom`>>
| 0..*
| xref::class/StageTrigger.adoc[`StageTrigger`]
| n/a

| <<TriggerCondition,`TriggerCondition`>>
| 0..*
| xref::class/TriggerCondition.adoc[`TriggerCondition`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#GateInputPin]
=== `GateInputPin`
+++Input to the gate.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.GateInputPin`
| Cardinality
| 1..*
| Type
| xref::class/GateInputPin.adoc[`GateInputPin`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kind]
=== `kind`
+++The logical operation of the gate.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/GateLogicKind.adoc[`GateLogicKind`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PinGate]
=== `PinGate`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.PinGate`
| Cardinality
| 0..*
| Type
| xref::class/PinGate.adoc[`PinGate`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ProtectiveActionCom]
=== `ProtectiveActionCom`
+++For the ProtectiveAction to be activated the condition for communication needs to be met (true).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.ProtectiveActionCom`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

//[discrete]
[#ProtectiveActionEnabled]
=== `ProtectiveActionEnabled`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.ProtectiveActionEnabled`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

//[discrete]
[#RemedialActionScheme]
=== `RemedialActionScheme`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.RemedialActionScheme`
| Cardinality
| 0..*
| Type
| xref::class/RemedialActionScheme.adoc[`RemedialActionScheme`]


|===

//[discrete]
[#StageTrigger]
=== `StageTrigger`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.StageTrigger`
| Cardinality
| 0..*
| Type
| xref::class/StageTrigger.adoc[`StageTrigger`]


|===

//[discrete]
[#StageTriggerArmed]
=== `StageTriggerArmed`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.StageTriggerArmed`
| Cardinality
| 0..*
| Type
| xref::class/StageTrigger.adoc[`StageTrigger`]


|===

//[discrete]
[#StageTriggerCom]
=== `StageTriggerCom`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.StageTriggerCom`
| Cardinality
| 0..*
| Type
| xref::class/StageTrigger.adoc[`StageTrigger`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TriggerCondition]
=== `TriggerCondition`


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.TriggerCondition`
| Cardinality
| 0..*
| Type
| xref::class/TriggerCondition.adoc[`TriggerCondition`]


|===


