v1.1.0/modules/schema/pages/class/Gate.adoc
= `Gate`
:toclevels: 4


+++Logical gate than support logical operation based on the input.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Gate`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Gate`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<GateInputPin,`GateInputPin`>>
//| [[slots_table.GateInputPin]]<<GateInputPin,`GateInputPin`>>
| 1..* +
xref::class/GateInputPin.adoc[`GateInputPin`]
| +++Input to the gate.+++
| _n/a_

| <<PinGate,`PinGate`>>
//| [[slots_table.PinGate]]<<PinGate,`PinGate`>>
| 0..* +
xref::class/PinGate.adoc[`PinGate`]
| _n/a_
| _n/a_

| <<ProtectiveActionCom,`ProtectiveActionCom`>>
//| [[slots_table.ProtectiveActionCom]]<<ProtectiveActionCom,`ProtectiveActionCom`>>
| 0..* +
xref::class/ProtectiveAction.adoc[`ProtectiveAction`]
| +++For the ProtectiveAction to be activated the condition for communication needs to be met (true).+++
| _n/a_

| <<ProtectiveActionEnabled,`ProtectiveActionEnabled`>>
//| [[slots_table.ProtectiveActionEnabled]]<<ProtectiveActionEnabled,`ProtectiveActionEnabled`>>
| 0..* +
xref::class/ProtectiveAction.adoc[`ProtectiveAction`]
| _n/a_
| _n/a_

| <<RemedialActionScheme,`RemedialActionScheme`>>
//| [[slots_table.RemedialActionScheme]]<<RemedialActionScheme,`RemedialActionScheme`>>
| 0..* +
xref::class/RemedialActionScheme.adoc[`RemedialActionScheme`]
| _n/a_
| _n/a_

| <<StageTrigger,`StageTrigger`>>
//| [[slots_table.StageTrigger]]<<StageTrigger,`StageTrigger`>>
| 0..* +
xref::class/StageTrigger.adoc[`StageTrigger`]
| _n/a_
| _n/a_

| <<StageTriggerArmed,`StageTriggerArmed`>>
//| [[slots_table.StageTriggerArmed]]<<StageTriggerArmed,`StageTriggerArmed`>>
| 0..* +
xref::class/StageTrigger.adoc[`StageTrigger`]
| _n/a_
| _n/a_

| <<StageTriggerCom,`StageTriggerCom`>>
//| [[slots_table.StageTriggerCom]]<<StageTriggerCom,`StageTriggerCom`>>
| 0..* +
xref::class/StageTrigger.adoc[`StageTrigger`]
| _n/a_
| _n/a_

| <<TriggerCondition,`TriggerCondition`>>
//| [[slots_table.TriggerCondition]]<<TriggerCondition,`TriggerCondition`>>
| 0..* +
xref::class/TriggerCondition.adoc[`TriggerCondition`]
| _n/a_
| _n/a_

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/GateLogicKind.adoc[`GateLogicKind`]
| +++The logical operation of the gate.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#GateInputPin]
=== `GateInputPin`
+++Input to the gate.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.GateInputPin`
| Cardinality
| 1..*
| Type
| xref::class/GateInputPin.adoc[`GateInputPin`]


|===

////
[.text-left]
--
<<slots_table.GateInputPin,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++The logical operation of the gate.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/GateLogicKind.adoc[`GateLogicKind`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PinGate]
=== `PinGate`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.PinGate`
| Cardinality
| 0..*
| Type
| xref::class/PinGate.adoc[`PinGate`]


|===

////
[.text-left]
--
<<slots_table.PinGate,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionCom]
=== `ProtectiveActionCom`
+++For the ProtectiveAction to be activated the condition for communication needs to be met (true).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.ProtectiveActionCom`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionCom,&#10548;>>
--
////


//[discrete]
[#ProtectiveActionEnabled]
=== `ProtectiveActionEnabled`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.ProtectiveActionEnabled`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveAction.adoc[`ProtectiveAction`]


|===

////
[.text-left]
--
<<slots_table.ProtectiveActionEnabled,&#10548;>>
--
////


//[discrete]
[#RemedialActionScheme]
=== `RemedialActionScheme`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.RemedialActionScheme`
| Cardinality
| 0..*
| Type
| xref::class/RemedialActionScheme.adoc[`RemedialActionScheme`]


|===

////
[.text-left]
--
<<slots_table.RemedialActionScheme,&#10548;>>
--
////


//[discrete]
[#StageTrigger]
=== `StageTrigger`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.StageTrigger`
| Cardinality
| 0..*
| Type
| xref::class/StageTrigger.adoc[`StageTrigger`]


|===

////
[.text-left]
--
<<slots_table.StageTrigger,&#10548;>>
--
////


//[discrete]
[#StageTriggerArmed]
=== `StageTriggerArmed`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.StageTriggerArmed`
| Cardinality
| 0..*
| Type
| xref::class/StageTrigger.adoc[`StageTrigger`]


|===

////
[.text-left]
--
<<slots_table.StageTriggerArmed,&#10548;>>
--
////


//[discrete]
[#StageTriggerCom]
=== `StageTriggerCom`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.StageTriggerCom`
| Cardinality
| 0..*
| Type
| xref::class/StageTrigger.adoc[`StageTrigger`]


|===

////
[.text-left]
--
<<slots_table.StageTriggerCom,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TriggerCondition]
=== `TriggerCondition`



[cols="h,4",width=65%]
|===
| URI
| `cim:Gate.TriggerCondition`
| Cardinality
| 0..*
| Type
| xref::class/TriggerCondition.adoc[`TriggerCondition`]


|===

////
[.text-left]
--
<<slots_table.TriggerCondition,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/GateInputPin.adoc[`GateInputPin`] | xref::class/GateInputPin.adoc#Gate[`Gate`]



| xref::class/PinGate.adoc[`PinGate`] | xref::class/PinGate.adoc#GateOutput[`GateOutput`]



| xref::class/ProtectiveAction.adoc[`ProtectiveAction`] | xref::class/ProtectiveAction.adoc#GateEnabledCondition[`GateEnabledCondition`]



| xref::class/RemedialActionScheme.adoc[`RemedialActionScheme`] | xref::class/RemedialActionScheme.adoc#GateArmed[`GateArmed`]



| xref::class/StageTrigger.adoc[`StageTrigger`] | xref::class/StageTrigger.adoc#GateTrigger[`GateTrigger`]



| xref::class/TriggerCondition.adoc[`TriggerCondition`] | xref::class/TriggerCondition.adoc#GateTrigger[`GateTrigger`]


|===

